# internal/controller/restapi/v1/request/user.go
@@ -20,6 +20,12 @@ type RefreshToken struct {
 	RefreshToken string `json:"refresh_token" validate:"required" example:"C-Kt0pA3..."`
 } // @name v1.RefreshToken
 
+// ChangePassword -.
+type ChangePassword struct {
+	CurrentPassword string `json:"current_password" validate:"required,max=72"    example:"secret123"`
+	NewPassword     string `json:"new_password"     validate:"required,min=8,max=72" example:"newsecret123"`
+} // @name v1.ChangePassword
+
 // UpdateUserSettings -.
 type UpdateUserSettings struct {
 	Timezone             string                   `json:"timezone"              validate:"omitempty,max=64"                  example:"Asia/Jakarta"`
